--- a/index.html
+++ b/index.html
@@ -34,8 +34,19 @@
     <button type="submit">Generate Resume</button>
   </form>
 
+
   
   <div id="resumeContent" style="margin-top: 20px;"></div>
+
+
+   
+<div id="resumeLink" style="display:none;">
+    <p>Your unique resume URL: <span id="generatedLink"></span></p>
+    <button id="copyLinkButton">Copy Link</button>
+  </div>
+  
+  
+  <button id="downloadPdfButton" style="display:none;">Download Resume as PDF</button>
 
   <script src="app.js"></script>
 </body>
